public/less/post/CommentItem.less
/**
 * CommentItem.less
 * @author albert
 * @author kevin
 */

@import './../variables.less';

.comment-item {
  .comment-row {
    display: flex;
    flex-direction: row;
    align-items: center;
    .comment-img {
      width: 30px;
      height: 30px;
      border-radius: 15px;
      margin-left: 10px;
    }
    .collapse-btn {
      color: @light-font;
      background: none;
      border: none;
      box-shadow: none;
      font-size: 20px;
      margin-left: -8px;
      cursor: pointer;
      border-radius: 10px;
      width: 20px;
      height: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
      &:active {
        box-shadow: none;
      }
      &:hover {
        background-color: rgba(0,0,0,.15);
      }
    }
    margin-top: 10px;
    .comment-col {
      flex-grow: 1;
      .comment-name.collapsed {
        text-decoration: none;
        vertical-align: -webkit-baseline-middle;
        color: @light-font;
        //margin-left: 43px;
      }
      .detail-time.collapsed {
        font-size: 10px;
        color: @light-font;
        vertical-align: -webkit-baseline-middle;
      }
    }
    .comment-text {
      margin-left: 10px;
      display: flex;
        flex-direction: column;
      .comment-title {
        display: flex;
        flex-direction: row;
          justify-content: space-between;
          width: 100%;
        .btn {
          color: @light-font;
          background: none;
          border: none;
          box-shadow: none;
          font-size: .9em;
          padding-left: 4px;
          padding-right: 6px;
          padding-top: 0px;
            padding-bottom: 0px;
        }
        .comment-name {
          color: black;
          font-size: .9em;
          display: flex;
            align-items: center;
        }
        .detail-time {
          font-size: .7em;
          color: @light-font;
        }
      }
      .comment-body {
        color: @light-font;
        font-size: 13px;
        margin-top: -4px;
        display: inline-block;
      }
      .reply-link {
        color: #4a4a4a;
        text-decoration: underline;
        font-size: .7em;
        //margin-left: 43px;
      }
      .detail-time {
        font-size: .7em;
        color: @light-font;
      }
    }
    .comment-actions {
      float: right;
      font-size: 12px;
      .btn {
        color: @light-font;
        background: none;
        border: none;
        box-shadow: none;
        font-size: 12px;
      }
      &.open {
        .btn {
          color: black;
        }
      }
    }
  }
  .comment-col.collapsed {
    margin-top: 10px;
    .comment-title {
      display: flex;
      flex-direction: row;
      width: 100%;
      justify-content: space-between;
      text-decoration: none;
      vertical-align: -webkit-baseline-middle;
      color: @light-font;
      align-items: center;
      //margin-left: 43px;
      .comment-name {
        color: @light-font;
        font-size: .9em;
        margin-left: 10px;
      }
      .comment-collapse {
        .collapse-btn {
          color: @light-font;
          background: none;
          border: none;
          box-shadow: none;
          font-size: 20px;
          cursor: pointer;
          border-radius: 10px;
          width: 20px;
          height: 20px;
          display: flex;
          align-items: center;
          justify-content: center;
          &:active {
            box-shadow: none;
          }
          &:hover {
            background-color: rgba(0,0,0,.15);
          }
        }
      }
    }
  }
}

